2001-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Introduce RTEMS_BSP_CONFIGURE.

2001-11-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add RTEMS_BSPOPTS_*(DATA_CACHE_ENABLE),
	RTEMS_BSPOPTS_*(INSTRUCTION_CACHE_ENABLE).

2001-11-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add @exceptions@ to SUBDIRS.
	* configure.ac: Apply RTEMS_BSPOPTS_*(*) to merge-in settings from
	make/custom/mpc8260ads.cfg, add RTEMS_PPC_EXCEPTIONS([new]).
	* include/Makefile.am: Convert PREINSTALL_FILES to
	TMPINSTALL_FILES, include force-preinstall.am.
	* wrapup/Makefile.am: Apply @exceptions@.

2001-10-29	Joel Sherrill <joel@OARcorp.com>

	* .cvsignore: Add more entries.

2001-10-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal.m4: Removed.  Should not have been in CVS.

2001-10-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal.m4: Regenerated.
	* configure.ac, include/Makefile.am, irq/Makefile.am,
	vectors/Makefile.am: Updated to autoconf 2.52.
	* include/.cvsignore: Added newly generated files.
	* include/bsp.h: Added include of bspopts.h.

2001-10-22	Joel Sherrill <joel@OARcorp.com>

	* .cvsignore, configure.ac, configure.in, console/.cvsignore,
	include/.cvsignore, network/.cvsignore, start/.cvsignore,
	startup/.cvsignore, wrapup/.cvsignore: Added .cvsignore
	files and other files missed in previous commit.

01-10-22	Andy Dachs <a.dachs@sstl.co.uk>

	* mpc8260ads added as new BSP.  tm27 reported not to run
	at this time.
	* ChangeLog, Makefile.am, README, aclocal.m4, bsp_specs,
	clock/.cvsignore, clock/Makefile.am, clock/p_clock.c, configure.in,
	console/Makefile.am, console/console.c, include/Makefile.am,
	include/bsp.h, include/coverhd.h, irq/.cvsignore, irq/Makefile.am,
	irq/irq.c, irq/irq.h, irq/irq_asm.S, irq/irq_init.c,
	network/Makefile.am, network/README, network/if_hdlcsubr.c,
	network/if_hdlcsubr.h, network/network.c, start/Makefile.am,
	start/start.S, startup/Makefile.am, startup/bspstart.c,