@@ -90,7 +90,7 @@
 #include <stdarg.h>
 #include <stdio.h>
 #include <bsp.h>                /* Must be before libio.h */
-#include <bspIo.h>
+#include <rtems/bspIo.h>
 #include <rtems/libio.h>
 #include <termios.h>
 
