@@ -1,3 +1,9 @@
+2002-01-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* clock/p_clock.c: Include rtems/bspIo.h instead of bspIo.h.
+	* console/console.c: Include rtems/bspIo.h instead of bspIo.h.
+	* irq/irq_init.c: Include rtems/bspIo.h instead of bspIo.h.
+
 2001-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* configure.ac: Introduce RTEMS_BSP_CONFIGURE.
